# patrimonio-genealogico-mcp

./: .env.example  Dockerfile  GPT_INSTRUCCIONES_V0_7.txt  README.md  README_V0_2.md  README_V0_3_1_FIX_414.md  README_V0_3_2_FIX_403_414.md  README_V0_3_3_REAL_QUERY_PLAN.md  README_V0_3_GALICIA.md  README_V0_4_GALICIA_EUROPEANA.md  README_V0_5_1_OCR_CLEANUP.md  README_V0_5_2_METS_ALTO.md  README_V0_5_3_ANTIBOT_VIEWER.md  README_V0_5_4_METS_EXPORT.md  README_V0_5_5_REAL_EXPORT_METS.md  README_V0_5_GALICIANA_OCR.md  README_V0_6_0_DEEP_INVESTIGATOR.md  README_V0_6_1_ACTIONS.md  README_V0_7_0_GALICIANA_RESEARCH_ENGINE.md  pyproject.toml  render.yaml  requirements.txt  server.py
rob/: __init__.py  database.py  galiciana_investigations.py  models.py  query_expansion.py  registry.py  sources.py  version.py
rob/connectors/: __init__.py  base.py  europeana_galicia.py  exa.py  galiciana_bdg.py  galiciana_ocr.py  oai_pmh.py
rob/investigations/: __init__.py  engine.py  exa.py  exa_store.py  models.py  sources.py  store.py
tests/: test_action_auth.py  test_europeana_galicia.py  test_exa_investigations.py  test_galiciana_bdg.py  test_galiciana_full_ocr_fallback.py  test_galiciana_investigations.py  test_galiciana_ocr.py  test_oai_pmh.py  test_query_expansion.py  test_sources.py  test_universal_investigations.py
