[project]
name = "rob-genealogia"
version = "1.0.0"
description = "Metabuscador genealógico español con conectores MCP"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "mcp[cli]>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
